# openapi-spec.json
@@ -1288,6 +1288,62 @@
     },
     "/reservation/my": {
       "get": {
+        "operationId": "ReservationController_getMyReservations",
+        "parameters": [
+          {
+            "name": "page",
+            "required": false,
+            "in": "query",
+            "description": "페이지 번호 (기본값: 1)",
+            "schema": {
+              "default": 1,
+              "example": 1,
+              "type": "number"
+            }
+          },
+          {
+            "name": "limit",
+            "required": false,
+            "in": "query",
+            "description": "페이지당 개수 (기본값: 10)",
+            "schema": {
+              "default": 10,
+              "example": 10,
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "멘티 예약 내역을 조회합니다.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ReservationItemDto"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "예약 내역 조회 중 오류가 발생했습니다."
+          }
+        },
+        "security": [
+          {
+            "access-token": []
+          }
+        ],
+        "summary": "멘티 진행중인 예약 내역 조회",
+        "tags": [
+          "Reservation"
+        ]
+      }
+    },
+    "/reservation/past": {
+      "get": {
         "operationId": "ReservationController_getMyClearReservations",
         "parameters": [
           {
